--- a/index.html
+++ b/index.html
@@ -14,6 +14,80 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <container>
+    <header>
+      <div class="nav">
+        <nav class="top-nav">
+          <a href="home">Home</a>
+          <a href="about">About</a>
+          <a href="work">Work</a>
+          <a href="contact">Contact</a>
+          </nav>
+      </div> <!--/top-nav-->
+      <div class="top-main">
+        <span class="image"><img src="images/man-small.jpg" alt="man at a computer"/></span>
+        <h1>Mark Sayers</h1>
+          <p>I'm a full stack web developer looking to help your business reach the world!! </p>
+          <button type:"button">Lets Team Up!</button>
+          <hr>
+      </div> <!--/top-main-->
+    </header>
+    <br>
+    <div class="about-left">
+      <h2>A Little About Me..</h2>
+        <p>I'm full stack web developer from Oklahoma City, Oklahoma. I work well in a team setting, and independently. Problem solver that loves anything tech. Lets team up and solve problems together.</p>
+    </div> <!--/about-left-->
+    <br>
+    <div class="about-right">
+      <h2>Stuff I'm Good At:</h2>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>Flex-Box</li>
+          <li>LESS Preprocesser</li>
+          <li>JavaScript</li>
+        </ul>
+    </div> <!--/about-right-->
+    <br>
+    <div class="bottom-work">
+      <h2>Work History</h2>
+        <table>
+          <tr>
+            <th>Yrs</th>
+            <th>Company</th>
+            <th>Title</th>
+            <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Amazon</td>
+            <td>Dev Ops</td>
+            <td>AWS</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Apple</td>
+            <td>Software Engineer</td>
+            <td>Swift</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Microsoft</td>
+            <td>Dev Ops</td>
+            <td>.Net</td>
+          </tr>
+        </table>
+    </div> <!--/bottom-work-->
+    <br>
+    <div class="contact">
+      <ul>
+        <li>marksayers46@icloud.com</li>
+        <li>(405)206-9535</li>
+      </ul>
+    </div>
+    <footer>
+      <p>Copyright Awesome 2019</p>
+    </footer>
+  </container>
 </body>
 </html>
