Modified index.less and index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Mark Sayers | Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,80 +14,75 @@
 </head>
 
 <body>
-  <container>
-    <header>
-      <div class="nav">
-        <nav class="top-nav">
-          <a href="home">Home</a>
-          <a href="about">About</a>
-          <a href="work">Work</a>
-          <a href="contact">Contact</a>
-          </nav>
-      </div> <!--/top-nav-->
-      <div class="top-main">
-        <span class="image"><img src="images/man-small.jpg" alt="man at a computer"/></span>
-        <h1>Mark Sayers</h1>
-          <p>I'm a full stack web developer looking to help your business reach the world!! </p>
-          <button type:"button">Lets Team Up!</button>
-          <hr>
-      </div> <!--/top-main-->
+  <div class="container">
+    <header class ="header">
+      <h1 class="header-name">Mark Sayers</h1>
+      <nav class="nav">
+        <a href ="#">Home</a>
+        <a href ="#">About Me</a>
+        <a href ="#">Portfolio</a>
+        <a href ="#">Contact Me</a>
+      </nav>
     </header>
-    <br>
-    <div class="about-left">
-      <h2>A Little About Me..</h2>
-        <p>I'm full stack web developer from Oklahoma City, Oklahoma. I work well in a team setting, and independently. Problem solver that loves anything tech. Lets team up and solve problems together.</p>
-    </div> <!--/about-left-->
-    <br>
-    <div class="about-right">
-      <h2>Stuff I'm Good At:</h2>
+      
+    
+<!--Introductory Section-->
+    <section class="intro-section">
+      <div class="section">
+        <h2 class="section-name">About Me</h2>
+          <p>Hi, my name is Mark Sayers and I am a Full Stack Developer & Computer Science student at Lambda School.
+            Over the years, I have held multiple positions in the heavy equipment industry.
+            These roles have exposed me to multiple situations requiring team work and customer service skills.
+            <br>
+            I work well under pressure during stressful situations, while solving problems enthusiastically, professionally and efficiently.
+            I thouroughly enjoy helping others solve problems through the power of software development. </p>
+      </div>
+    </section>
+    <!--Experience Section-->    
+    <section class="experience-section">
+      <div class="section">
+        <h2 class="section-name">Work Experiences</h2>
+          <p>
+          H&E Equipment | Heavy Equipment Mechanic 2004-2019
+          <br>
+          TWA Airlines | Ground Support Supervisor/ Mechanic 1997-2004 <br>
+          United States Air Force | Ground Support Mechanic 1993-1997
+          </p>     
+      </div>
+    </section>
+<!--Education Section-->
+    <section class="education-section">
+      <div class="section">
+        <h2 class="section-name">Education</h2>
+        <p>
+          Lambda School | Full Stack Web Development | Expected 2020 <br>
+          Beaver County Community College | Associates Degree Electronics | 1991-1993
+        </p>
+      </div>
+    </section>
+<!--Skills Section-->
+    <section class="skills-section">
+      <div class="section">
+        <h2 class="section-name">Skills</h2>
         <ul>
           <li>HTML5</li>
-          <li>CSS3</li>
-          <li>Flex-Box</li>
-          <li>LESS Preprocesser</li>
+          <li>CSS3 (Less)</li>
           <li>JavaScript</li>
+          <li>Git / GitHub</li>
+          <li>CLI</li>
+          <li>UI / UX</li>
         </ul>
-    </div> <!--/about-right-->
-    <br>
-    <div class="bottom-work">
-      <h2>Work History</h2>
-        <table>
-          <tr>
-            <th>Yrs</th>
-            <th>Company</th>
-            <th>Title</th>
-            <th>Tech Used</th>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Amazon</td>
-            <td>Dev Ops</td>
-            <td>AWS</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Apple</td>
-            <td>Software Engineer</td>
-            <td>Swift</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Microsoft</td>
-            <td>Dev Ops</td>
-            <td>.Net</td>
-          </tr>
-        </table>
-    </div> <!--/bottom-work-->
-    <br>
-    <div class="contact">
-      <ul>
-        <li>marksayers46@icloud.com</li>
-        <li>(405)206-9535</li>
-      </ul>
-    </div>
-    <footer>
-      <p>Copyright Awesome 2019</p>
-    </footer>
-  </container>
+      </div>
+    </section>
+<!--Contact Section-->
+    <section class="contact-section">
+      <div class="section">
+        <h2 class="section-name">Contact Me</h2>
+        <p>Email: marksayers46@icloud.com</p>
+        <p>Phone: 405-206-9535</p>
+        <p>Twitter: @marksayers96</p>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
